Fix to FF layout issue with video players in judjing site

--- a/public/stylesheets/judging.css
+++ b/public/stylesheets/judging.css
@@ -23,7 +23,7 @@ img.play-icon.small { top:8px; left:9px;}
 
 button.hider { display: block; margin: 0 auto;}
 
-.video-player { margin: 20px auto 10px; display: block;}
+.video-player { margin: 20px auto 10px; display: block; clear: both;}
 
 #judging-welcome { width: 500px; margin: 0 auto; border-top: 1px dotted #aaa; border-bottom: 1px dotted #aaa;}
 #judging-welcome p { margin: 10px 0; }
